environment/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: devops-app
  labels:
    app: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
