environment/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: devops-app
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
