environment/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: devops-app
  labels:
    app: web
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
